fix: make code readable, fixed minor bugs

--- a/src/output.css
+++ b/src/output.css
@@ -560,18 +560,6 @@ video {
   left: 0px;
 }
 
-.left-\[100px\] {
-  left: 100px;
-}
-
-.left-\[55px\] {
-  left: 55px;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
 .top-0 {
   top: 0px;
 }
@@ -600,60 +588,60 @@ video {
   display: flex;
 }
 
-.h-2 {
-  height: 0.5rem;
+.hidden {
+  display: none;
 }
 
-.h-52 {
-  height: 13rem;
+.h-2 {
+  height: 0.5rem;
 }
 
 .h-\[105vh\] {
   height: 105vh;
 }
 
-.w-20 {
-  width: 5rem;
+.h-\[10\] {
+  height: 10;
 }
 
-.w-60 {
-  width: 15rem;
+.h-\[100\%\] {
+  height: 100%;
 }
 
-.w-\[20vw\] {
-  width: 20vw;
+.h-\[\] {
+  height: ;
 }
 
-.w-\[30px\] {
-  width: 30px;
+.h-screen {
+  height: 100vh;
 }
 
-.w-\[80vw\] {
-  width: 80vw;
+.h-\[70vh\] {
+  height: 70vh;
 }
 
-.w-screen {
-  width: 100vw;
+.h-\[50vh\] {
+  height: 50vh;
 }
 
 .w-\[100\%\] {
   width: 100%;
 }
 
-.w-\[80\%\] {
-  width: 80%;
+.w-\[30px\] {
+  width: 30px;
 }
 
-.w-\[60\%\] {
-  width: 60%;
+.w-screen {
+  width: 100vw;
 }
 
-.w-\[30\%\] {
-  width: 30%;
+.w-\[\] {
+  width: ;
 }
 
-.w-\[70vw\] {
-  width: 70vw;
+.w-\[90vw\] {
+  width: 90vw;
 }
 
 .grow {
@@ -694,10 +682,6 @@ video {
   justify-content: space-around;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -712,16 +696,12 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .p-5 {
   padding: 1.25rem;
 }
 
-.pr-\[100px\] {
-  padding-right: 100px;
+.p-8 {
+  padding: 2rem;
 }
 
 .text-sm {
@@ -757,12 +737,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.shadow-\[1px_5px_15px_1px_rgba\(0\2c 0\2c 0\2c 1\)\] {
-  --tw-shadow: 1px 5px 15px 1px rgba(0,0,0,1);
-  --tw-shadow-colored: 1px 5px 15px 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -776,6 +750,10 @@ video {
 
   .sm\:left-\[120px\] {
     left: 120px;
+  }
+
+  .sm\:flex {
+    display: flex;
   }
 
   .sm\:h-\[300px\] {
@@ -794,12 +772,16 @@ video {
     width: 45%;
   }
 
-  .sm\:w-auto {
-    width: auto;
-  }
-
   .sm\:w-\[80\%\] {
     width: 80%;
+  }
+
+  .sm\:w-\[85vw\] {
+    width: 85vw;
+  }
+
+  .sm\:pr-\[100px\] {
+    padding-right: 100px;
   }
 
   .sm\:text-2xl {
